--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
+    "@react-hook/window-scroll": "^1.3.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "next": "12.1.6",
+    "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-query": "^3.38.1"
+    "react-query": "^3.38.1",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
@@ -31,7 +36,6 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4"
   }
 }
