--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
     "@react-hook/window-scroll": "^1.3.0",
+    "@uiball/loaders": "^1.2.6",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-query": "^3.38.1",
     "tailwindcss": "^3.0.24"
   },
